src/objects/Program_Offered__c.object
<CustomObject>
    <fields>
        <fullName>Area_of_Major__c</fullName>
        <label>Area of Major</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Administration of Justice</fullName>
                </value>
                <value>
                    <fullName>American Indian Studies</fullName>
                </value>
                <value>
                    <fullName>Anthropology</fullName>
                </value>
                <value>
                    <fullName>Astronomy</fullName>
                </value>
                <value>
                    <fullName>Automotive Technology</fullName>
                </value>
                <value>
                    <fullName>Aviation Technology</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Building and Construction Technology</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Clinical Research Coordinator</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Computer Aided Drafting</fullName>
                </value>
                <value>
                    <fullName>Computer Information Systems</fullName>
                </value>
                <value>
                    <fullName>Culinary Arts</fullName>
                </value>
                <value>
                    <fullName>Dental Studies</fullName>
                </value>
                <value>
                    <fullName>Digital Arts</fullName>
                </value>
                <value>
                    <fullName>Direct Care Professional</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Education</fullName>
                </value>
                <value>
                    <fullName>Educational Technology</fullName>
                </value>
                <value>
                    <fullName>Emergency Medical Technology</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Fashion Design</fullName>
                </value>
                <value>
                    <fullName>Field Archeology</fullName>
                </value>
                <value>
                    <fullName>Fine Arts</fullName>
                </value>
                <value>
                    <fullName>Fire Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_Study__c</fullName>
        <label>Area of Study</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts, Humanities &amp; Communication</fullName>
                </value>
                <value>
                    <fullName>Business Programs</fullName>
                </value>
                <value>
                    <fullName>Computer Information Technology</fullName>
                </value>
                <value>
                    <fullName>Education Programs</fullName>
                </value>
                <value>
                    <fullName>General Studies or Undecided</fullName>
                </value>
                <value>
                    <fullName>Health-Related Professions</fullName>
                </value>
                <value>
                    <fullName>Public Safety Programs</fullName>
                </value>
                <value>
                    <fullName>Science &amp; Engineering</fullName>
                </value>
                <value>
                    <fullName>Social Sciences</fullName>
                </value>
                <value>
                    <fullName>Trade Professions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Offered_Name__c</fullName>
        <label>Program Offered Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selective_Admissions__c</fullName>
        <label>Selective Admissions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program Offered</label>
    <nameField>
        <label>Program Offered Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs Offered</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>